| Bug #25741 | Unable to allocate node id during restarting data node | ||
|---|---|---|---|
| Submitted: | 21 Jan 2007 15:03 | Modified: | 30 Apr 2007 10:42 |
| Reporter: | Serge Kozlov | ||
| Status: | Closed | ||
| Category: | Server: ClusterDD | Severity: | S2 (Serious) |
| Version: | 5.1.15-bk | OS: | Linux (Linux FC4 64bit) |
| Assigned to: | Bugs System | Target Version: | |
[21 Jan 2007 15:03]
Serge Kozlov
[21 Jan 2007 15:10]
Serge Kozlov
bug25741.tar.gz on ftp://ftp.mysql.com
[22 Jan 2007 17:50]
Tomas Ulin
bug25741.tar.gz">ftp://ftp.mysql.com/bug25741.tar.gz not found, can you specify where the files are T
[18 Apr 2007 8:46]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/24753 ChangeSet@1.2491, 2007-04-18 14:44:29+08:00, gni@dev3-221.dev.cn.tlan +1 -0 BUG#25741 Unable to alloc node id during restarting data node
[25 Apr 2007 9:59]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/25371 ChangeSet@1.2557, 2007-04-25 15:57:42+08:00, gni@dev3-221.dev.cn.tlan +2 -0 BUG#25741 AllocNodeIdRef::NodeFailureHandlingNotCompleted
[26 Apr 2007 14:12]
Guangbao Ni
push into mysql-5.1-ndb-bj tree
[26 Apr 2007 22:33]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/25557 ChangeSet@1.2467, 2007-04-26 22:49:58+02:00, tomas@whalegate.ndb.mysql.com +2 -0 BUG#25741 AllocNodeIdRef::NodeFailureHandlingNotCompleted
[27 Apr 2007 11:55]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/25593 ChangeSet@1.2496, 2007-04-27 12:11:29+02:00, tomas@whalegate.ndb.mysql.com +1 -0 Bug #25741 Unable to allocate node id during restarting data node - add additional sleep so that we don't get 100% cpu usage retrying saomething that can take some time before succeeding
[28 Apr 2007 21:35]
Bugs System
Pushed into 5.1.18-beta
[30 Apr 2007 10:42]
Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.
If necessary, you can access the source repository and build the latest available version,
including the bug fix. More information about accessing the source trees is available at
http://dev.mysql.com/doc/en/installing-source.html
Documented bugfix in 5.1.18 and 5.1.15-ndb-6.1.16 changelogs.
[9 May 2007 5:17]
Guangbao Ni
merge into mysql-5.1-new-ndb tree
[10 May 2007 14:57]
Bugs System
Pushed into 5.1.19-beta
